--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9028,7 +9028,7 @@ h1, h2, h3, h4, h5,
     -ms-transition: all 0.3s ease;
     transition: all 0.3s ease;
     z-index: 0; }
-.ftco-services-2 .services .icon {
+.ftco-services-2 .services .icon{
     line-height: 1.3;
     position: relative;
     margin-bottom: 20px;
@@ -9037,7 +9037,7 @@ h1, h2, h3, h4, h5,
     margin: 0 auto;
     z-index: 1;
     margin-bottom: 20px;
-    background: #4b69bd;
+    background: #5778d5;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
