--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8099,11 +8099,11 @@ h1, h2, h3, h4, h5,
     margin: 0 auto;
     padding: 0; }
 .ftco-navbar-light .navbar-brand {
-    color: #fff;
+    color: #e88941;
     padding-top: .7rem;
     padding-bottom: .7rem; }
 .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
-    color: #000000 !important; }
+    color: #4b69bd !important; }
 @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-brand {
         color: #fff; } }
@@ -8117,7 +8117,7 @@ h1, h2, h3, h4, h5,
     padding-bottom: .7rem;
     padding-left: 20px;
     padding-right: 20px;
-    color: #fff;
+    color: #e88941;
     font-weight: 400;
     opacity: 1 !important; }
 .ftco-navbar-light .navbar-nav > .nav-item > .nav-link span {
