--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -711,7 +711,8 @@ pre code {
 .properties_grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
+    gap: 3%;
+    margin-bottom: 4em;
 }
 
 /*- Васенин С.А. 2023-11-04*/
