Правки по страницам каталога и объявления
Мелкие правки по вёрстке и стилям
Немного изменила сидер по категориям (просто вбила названия с большой буквы)
                и сидер по недвижимости (изменила формат изображений на прямоугольник)

--- a/public/assets/css/object.css
+++ b/public/assets/css/object.css
@@ -47,6 +47,7 @@
 .description-content-left img {
     padding-right: 5%;
     width: 100%;
+    object-fit: contain;
 }
 
 .description-content-right div {
