Правка страниц "О нас" и "Контакты"
Удалил формы фильтров.
На страницу Контакты добавил интерактивную Яндекс-карту.
Телефон и почту сделал соответствующим типом кликабельных ссылок.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14491,3 +14491,11 @@ textarea.form-control {
     padding-top: 20px;
 }
 
+.contact-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-self: stretch;
+    padding: auto;
+    margin-bottom: 20px;
+}
