--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -20,8 +20,8 @@
 }
 
 .auth-nav-text:active {
-    transform: scale(.9);
-    transition: 0.3s ease;
+    transform: scale(.8);
+    transition: 0.4s ease-in-out;
 }
 
 .auth-nav-span {
@@ -31,7 +31,7 @@
 
 .auth-nav-span:active {
     color: #FFFFFF;
-    transition: 0.4s ease;
+    transition: 0.4s ease-in;
 }
 
 
