--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -116,3 +116,20 @@
     border-radius: 40%;
     height: 2px;
 }
+
+.dealModalWindow {
+    display: none;
+    /*position: absolute;*/
+    /*position: fixed;*/
+    /*z-index: 5;*/
+    /*left: 0;*/
+    /*top: 0;*/
+    max-width: fit-content;
+    max-height: 350px;
+    border-radius: 10px;
+    padding: 10px;
+    box-sizing: border-box;
+    /*border: 1px solid #000000;*/
+    background-color: #f6f6f6;
+    opacity: .81;
+}
