--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -118,18 +118,23 @@
 }
 
 .dealModalWindow {
-    display: none;
-    /*position: absolute;*/
+    /*display: none;*/
+    position: absolute;
     /*position: fixed;*/
-    /*z-index: 5;*/
-    /*left: 0;*/
-    /*top: 0;*/
+    z-index: 5;
+    right: 250px;
+    top: 0;
     max-width: fit-content;
-    max-height: 350px;
+    max-height: 450px;
     border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
     /*border: 1px solid #000000;*/
     background-color: #f6f6f6;
     opacity: .81;
+}
+
+.dealModalCloseCross {
+    width: 10px;
+
 }
