--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -117,6 +117,23 @@
     height: 2px;
 }
 
+.dealsWrap {
+    padding: 5px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background-color: #f6f6f6;
+
+}
+
+.dealsList {
+    border:1px solid #e4e3fd;
+    border-radius: 10px;
+    padding: 5px;
+    box-sizing: border-box;
+    max-height: 480px;
+    overflow-y: auto;
+}
+
 .dealModalWindow {
     /*display: none;*/
     position: absolute;
@@ -136,5 +153,4 @@
 
 .dealModalCloseCross {
     width: 10px;
-
 }
