--- a/public/assets/css/object.css
+++ b/public/assets/css/object.css
@@ -268,3 +268,14 @@
 .properties .desc .location {
     color: rgb(0 0 0 / 45%);
 }
+
+.favourities_img{
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    z-index: 2 !important;
+}
+
+.properties{
+    position: relative;
+}
