--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7528,6 +7528,7 @@ button.bg-dark:focus {
 
 .d-none {
     display: none !important;
+    padding-top: 20px;
 }
 
 .d-inline {
@@ -11686,7 +11687,7 @@ h5,
     top: 30px;
     left: 0;
     right: 0;
-    z-index: 3;
+    z-index: 10;
 }
 
 @media (max-width: 991.98px) {
@@ -14510,4 +14511,3 @@ textarea.form-control {
     padding: auto;
     margin-bottom: 20px;
 }
-
