--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -162,6 +162,28 @@
     font-style: italic;
 }
 
+.actionButton {
+    font-size: 16px!important;
+    font-weight: 600!important;
+}
+
+.actionButton:hover {
+    background-color: #ddd;
+}
+
+.btn:active {
+    border: none!important;
+}
+
+
+.formWrap{
+    margin: 0 5px;
+    width: 100%;
+    height: 100%;
+}
+
+
+
 
 
 /*.dealsWrap {*/
