--- a/public/assets/css/object.css
+++ b/public/assets/css/object.css
@@ -44,9 +44,17 @@
     grid-template-columns: 1fr 2fr;
     align-items: start;
     align-content: stretch;
+    grid-gap: 24px;
 }
+
 .description-content-left img {
-    padding-right: 5%;
+    box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 10px;
+    margin-right: 24px;
+}
+
+.description-content-left img,
+.recommend-card img{
     width: 100%;
     object-fit: contain;
 }
@@ -214,7 +222,7 @@
 
 .deal-form-popup {
     position: absolute;
-    top: 0px;
+    top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.75);
@@ -232,7 +240,7 @@
 
 .carousel-item img {
     height: 400px;
-    object-fit: scale-down;
+    object-fit: cover;
 }
 
 .review-body .date {
@@ -286,4 +294,30 @@
 
 .properties:hover .favourites_img{
     opacity: 1;
+}
+
+.recommend-catalog{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 24px;
+    margin: 24px 0;
+}
+
+.recommend-card {
+    box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    padding: 10px;
+}
+
+.recommend-catalog .desc-price{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-top: 10px;
+}
+
+.container.inline {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    box-shadow: none !important;
 }
