--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -2,6 +2,14 @@
     margin: 4px 0 0;
 }
 
+.dashboard-link img {
+    box-shadow: 0 0 14px 9px rgb(34 60 80 / 20%);
+    padding: 10px;
+    margin-bottom: 24px;
+    max-width: 150px;
+    object-fit: contain;
+}
+
 .avatar-block {
     height: 100px;
     width: 100px;
@@ -18,6 +26,7 @@
 .auth-nav-text {
     color: #FFFFFF;
     text-transform: uppercase;
+    margin-top: 3px;
 }
 
 .auth-nav-text:active {
@@ -27,13 +36,18 @@
 
 .auth-nav-span {
     font-size: 14px;
-    font-weight: 500
+    font-weight: 500;
+    color: #4b69bd;
 }
 
-.auth-nav-span:active {
+.auth-nav-span:hover {
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
+}
+
+/* .auth-nav-span:active {
     color: #FFFFFF;
     transition: 0.4s ease-in;
-}
+} */
 
 .cabinet-index-btn {
     margin: 0 10px 0 0;
@@ -96,22 +110,37 @@
     border-top: none;
 }
 
+.nav-item-user {
+    margin-bottom: 0;
+    list-style-type: none;
+}
+
+.nav-item-user:hover {
+    .popUpCabinetEnter {
+        visibility: visible;
+        opacity: 1;
+    }
+
+}
 
 .popUpCabinetEnter {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s ease-in-out;
     position: absolute;
     /*position: fixed;*/
     z-index: 5;
-    left: -30px;
-    top: 30px;
+    left: 0px;
+    top: 24px;
+    margin-top: 10px;
     max-width: fit-content;
     max-height: 350px;
     border-radius: 10px;
     padding: 10px;
     box-sizing: border-box;
     /*border: 1px solid #000000;*/
-    background-color: #f6f6f6;
-    opacity: .81;
+    background-color: #ccc;
+    /* opacity: .81; */
 }
 
 .modal-text {
@@ -121,7 +150,7 @@
     font-weight: 900;
     font-size: 14px;
     line-height: 16px;
-    color: #957676;
+    color: #6c757d;
     margin: 0 0 5px 0;
 }
 
@@ -134,11 +163,11 @@
     line-height: 16px;
     margin: 0;
     display: block;
-    color: #7b928e
+    color: #4b69bd;
 }
 
 .modal-link-text:hover {
-    opacity: .3;
+    text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.3);
 }
 
 .modal-link-text:active {
@@ -163,8 +192,8 @@
 }
 
 .actionButton {
-    font-size: 16px!important;
-    font-weight: 600!important;
+    font-size: 16px !important;
+    font-weight: 600 !important;
 }
 
 .actionButton:hover {
@@ -172,18 +201,18 @@
 }
 
 .btn:active {
-    border: none!important;
+    border: none !important;
 }
 
 
-.formWrap{
+.formWrap {
     margin: 0 5px;
     width: 100%;
     height: 100%;
 }
 
 /*для календаря*/
-.container.inline {
+.container .inline {
     display: flex !important;
     justify-content: center;
     align-items: center;
@@ -199,7 +228,7 @@
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
     left: 720px;
     top: 60px;
