--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -24,6 +24,8 @@
 }
 
 .auth-nav-text {
+    align-items: center;
+    display: flex;
     color: #FFFFFF;
     text-transform: uppercase;
     margin-top: 3px;
@@ -35,13 +37,11 @@
 }
 
 .auth-nav-span {
+    height: fit-content;
     display: block;
-    margin: 8px 0 0 5px;
     font-size: 14px;
     font-weight: 500;
-
     color: #4b69bd;
-
 }
 
 .auth-nav-span:hover {
@@ -52,6 +52,15 @@
     color: #FFFFFF;
     transition: 0.4s ease-in;
 } */
+
+.avatar-block {
+    width:35px;
+    height: 35px;
+    border: none;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 5px 0 0
+}
 
 .cabinet-index-btn {
     margin: 0 10px 0 0;
@@ -119,13 +128,10 @@
     list-style-type: none;
 }
 
-.nav-item-user:hover {
-
-    .popUpCabinetEnter {
-        visibility: visible;
-        opacity: 1;
-    }
-
+.nav-item-user:hover
+.popUpCabinetEnter {
+    visibility: visible;
+    opacity: 1;
 }
 
 
@@ -137,7 +143,7 @@
     position: absolute;
     /*position: fixed;*/
     z-index: 5;
-    left: 0px;
+    left: 0;
     top: 24px;
     margin-top: 10px;
     max-width: fit-content;
@@ -226,7 +232,7 @@
     box-shadow: none !important;
 }
 
-/*#dropdown {*/
+/*.dropdown {*/
 /*    position: relative;*/
 /*}*/
 
@@ -239,13 +245,13 @@
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     z-index: 1;
     right: 0;
     top: 60px;
 }
 
-.dropdown-content a{
+.dropdown-content a {
     font-size: 0.875rem;
     font-weight: 500;
     line-height: 1.25rem;
@@ -256,12 +262,14 @@
 }
 
 .dropdown-content a:hover {
-    color: #1c8d88;
+    color: #2c4763;
+    transform: translateX(2px);
+    transition: 0.2s ease;
 }
 
-.downArrow {
-    margin: 0 0 0 6px;
 
+.downArrow {
+    margin: 2px 0 0 6px;
 }
 
 /*.dropdown-content a:hover {background-color: #ddd;}*/
