--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -115,12 +115,10 @@
     list-style-type: none;
 }
 
-.nav-item-user:hover {
+.nav-item-user:hover
     .popUpCabinetEnter {
         visibility: visible;
         opacity: 1;
-    }
-
 }
 
 .popUpCabinetEnter {
@@ -244,6 +242,64 @@
 .downArrow {
     margin: 0 0 0 6px;
 
+}
+
+.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+}
+
+
+.accordion:hover {
+    background-color: #4b69bd;
+    color: white;
+}
+
+.panel {
+    padding: 0 18px;
+    display: none;
+    background-color: white;
+    overflow: hidden;
+}
+
+.accordion:after {
+    content: '\2795';
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796";
+}
+
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 40px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #4b69bd;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color: #e88941; /* Add a dark-grey background on hover */
 }
 
 /*.dropdown-content a:hover {background-color: #ddd;}*/
