--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14511,3 +14511,24 @@ textarea.form-control {
     padding: auto;
     margin-bottom: 20px;
 }
+
+/*scroll-to-top-button*/
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 40px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #4b69bd;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+}
+
+#myBtn:hover {
+    background-color: #e88941;
+}
