--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12899,7 +12899,7 @@ h5,
 .table {
     min-width: 1000px !important;
     width: 100%;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .table th {
