Правки верстки и стиля стр. аутентификации

--- a/public/assets/css/cabinet.css
+++ b/public/assets/css/cabinet.css
@@ -442,7 +442,8 @@ table .formWrap {
 
 .review-address {
     color: #4b69bd !important;
-    font-size: 22px !important;;
+    font-size: 22px !important;
+    ;
 }
 
 .review-textarea {
